# K2SO

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  drizzle.config.ts  electron-builder.config.ts  electron.vite.config.ts  package-lock.json  package.json  release-notes-0.32.12.md  release-notes-0.32.13.md  release-notes-0.32.5.md  release-notes-0.32.7.md  release-notes-0.32.8.md  release-notes-0.32.9.md  release-notes-0.33.0.md  release-notes-0.34.0.md  release-notes-0.35.4.md  release-notes-0.35.5.md  release-notes-0.35.6.md  release-notes-0.36.0.md  release-notes-0.36.1.md  release-notes-0.36.10.md  release-notes-0.36.11.md  release-notes-0.36.12.md  release-notes-0.36.13.md  release-notes-0.36.14.md  release-notes-0.36.15.md  release-notes-0.36.16.md  release-notes-0.36.2.md  release-notes-0.36.3.md  release-notes-0.36.4.md  release-notes-0.36.5.md  release-notes-0.36.6.md  release-notes-0.36.7.md  release-notes-0.36.8.md  release-notes-0.36.9.md  (+4 more)
cli/: k2so  (+1 more)
crates/k2so-core/: Cargo.toml
crates/k2so-core/drizzle_sql/: 0002_fearless_photon.sql  0010_active_workspaces.sql  0011_add_indexes.sql  0015_workspace_tiers.sql  0016_rename_tiers_to_states.sql  0018_rename_pod_to_coordinator.sql  0020_heartbeat_schedule.sql  0023_workspace_relations.sql  0024_activity_feed.sql  0025_activity_feed_read.sql  0026_heartbeat_fires.sql  0029_heartbeat_fires_schedule_name.sql  0030_code_migrations.sql  0031_skill_regen_version.sql  0032_add_use_session_stream.sql  0033_agent_session_terminal_id_namespace.sql  0034_heartbeat_session_archive_show.sql  0035_heartbeat_concurrency_policy.sql  0036_heartbeat_active_session.sql  0037_agent_session_active_terminal.sql  0038_rename_workspace_sessions_to_layouts.sql  0039_agent_sessions_to_workspace_sessions.sql  0040_rename_agent_heartbeats.sql  0041_activity_feed_workspace_keyed.sql
crates/k2so-core/examples/: kessel_spawn_bench.rs  session_stream_subscribe.rs
crates/k2so-core/src/: agent_hooks.rs  chat_history.rs  fs_abstract.rs  fs_atomic.rs  git.rs  hook_config.rs  lib.rs  perf.rs  scheduler.rs  wake.rs
crates/k2so-core/src/agents/: build_launch.rs  channel.rs  checkin.rs  commands.rs  connections.rs  delegate.rs  events.rs  heartbeat.rs  heartbeat_install.rs  launch_profile.rs  mod.rs  onboarding.rs  reviews.rs  scheduler.rs  session.rs  settings.rs  skill.rs  skill_content.rs  skill_writer.rs  terminal_id.rs  triage_summary.rs  unification.rs  wake.rs  work_item.rs  workspace_regen.rs  workspaces.rs
crates/k2so-core/src/awareness/: budget.rs  bus.rs  egress.rs  inbox.rs  ingress.rs  mod.rs  roster.rs  routing.rs
crates/k2so-core/src/companion/: app_event_source.rs  auth.rs  cli_routes.rs  event_sink.rs  keychain.rs  mod.rs  proxy.rs  settings_bridge.rs  terminal_bridge.rs  types.rs  websocket.rs
crates/k2so-core/src/db/: mod.rs  schema.rs
crates/k2so-core/tests/: session_stream_apc.rs  session_stream_archive.rs  session_stream_awareness.rs  session_stream_bus.rs  session_stream_bytes.rs  session_stream_claude_recognizer.rs  session_stream_egress.rs  session_stream_grow_shrink.rs  session_stream_inbox.rs  session_stream_ingress.rs  session_stream_line_mux.rs  session_stream_pty.rs  session_stream_registry.rs  session_stream_routing.rs  session_stream_scaffold.rs  session_stream_setting.rs  session_stream_types.rs
crates/k2so-core/wakeup_templates/: custom.md  workspace.md
crates/k2so-daemon/: Cargo.toml
crates/k2so-daemon/src/: agents_routes.rs  awareness_ws.rs  canonical_session.rs  cli.rs  cli_response.rs  companion_routes.rs  events.rs  heartbeat_launch.rs  lib.rs  main.rs  pending_live.rs  providers.rs  session_lookup.rs  session_map.rs  sessions_bytes_ws.rs  sessions_grid_ws.rs  sessions_ws.rs  signal_format.rs  spawn.rs  terminal_routes.rs  triage.rs  v2_session_map.rs  v2_spawn.rs  wake_headless.rs  watchdog.rs  workspace_msg.rs
crates/k2so-daemon/tests/: agents_routes_integration.rs  awareness_ws_integration.rs  canonical_session_integration.rs  companion_routes_integration.rs  heartbeat_fire_v2_integration.rs  heartbeat_port_claim_integration.rs  pending_live_durability.rs  providers_inject_integration.rs  scheduler_wake_integration.rs  sessions_ws_integration.rs  spawn_to_signal_e2e.rs  terminal_routes_integration.rs  triage_integration.rs  watchdog_integration.rs  workspace_msg_integration.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: perf.rs
src-tauri/capabilities/: default.json
src-tauri/drizzle_sql/: 0000_lethal_scalphunter.sql  0001_nostalgic_lenny_balinger.sql  0005_window_state.sql  0006_time_entries.sql  0007_chat_session_names.sql  0008_chat_pinned.sql  0009_workspace_sessions.sql  0012_agent_mode.sql  0013_agent_mode_selector.sql  0014_agent_sessions.sql  0017_fix_maintenance_state.sql  0019_workspace_nav_visible.sql  0021_rename_coordinator_to_manager.sql  0022_agent_sessions_table.sql  0027_wakes_since_compact.sql  0028_agent_heartbeats.sql
src-tauri/icons/: icon.icns
src-tauri/src/: agent_hook_sink.rs  agent_hooks.rs  companion_host.rs  companion_settings_provider.rs  daemon_client.rs  daemon_events.rs  editors.rs  fs_abstract.rs  lib.rs  main.rs  menu.rs  project_config.rs  state.rs  terminal_event_sink.rs  tray.rs  watcher.rs  window.rs  workspace_regen_provider.rs
src-tauri/src/commands/: agents.rs  assistant.rs  chat_history.rs  claude_auth.rs  companion.rs  daemon.rs  filesystem.rs  focus_groups.rs  format.rs  git.rs  k2so_agents.rs  kessel.rs  kessel_term.rs  mod.rs  project_config.rs  projects.rs  quit.rs  review_checklist.rs  settings.rs  skill_layers.rs  states.rs  terminal.rs  themes.rs  timer.rs  updater.rs  workspace_layouts.rs  workspace_ops.rs  workspace_sections.rs  workspace_sessions.rs  workspaces.rs
src-tauri/src/companion/: auth.rs  mod.rs  proxy.rs  types.rs  websocket.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/git/: mod.rs
src-tauri/src/llm/: download.rs  file_index.rs  mod.rs  tools.rs
src-tauri/src/terminal/: alacritty_backend.rs  font_renderer.rs  grid_types.rs  legacy.rs  mod.rs  reflow.rs
(+329 files in other folders)
