[package]
name = "k2so"
version = "0.12.1"
edition = "2021"
description = "Developer workspace with terminals, git worktrees, and agent presets"
license = "MIT"

[lib]
name = "k2so_lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "k2so"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
dirs = "5"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["ico", "png", "jpeg"] }
url = "2"
libc = "0.2"
llama-cpp-2 = { version = "0.1", features = ["metal", "sampler"] }
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tauri-plugin-drag = "2.1.0"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
trash = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
