[package]
name = "k2so"
version = "0.19.0"
edition = "2021"
description = "Developer workspace with terminals, git worktrees, and agent presets"
license = "MIT"

[lib]
name = "k2so_lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "k2so"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
dirs = "5"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["ico", "png", "jpeg"] }
url = "2"
libc = "0.2"
llama-cpp-2 = { version = "0.1", features = ["metal", "sampler"] }
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tauri-plugin-drag = "2.1.0"
tauri-plugin-opener = "2"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
trash = "5"


# Alacritty terminal backend
alacritty_terminal = "0.26.0-rc1"
parking_lot = "0.12"
polling = "3"
rustix = { version = "1", features = ["termios", "process"] }
mio = { version = "1", features = ["os-poll", "os-ext"] }
signal-hook = "0.3"
signal-hook-mio = { version = "0.2", features = ["support-v1_0"] }
fontdue = "0.9"
qoi = "0.4"

[features]
default = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Optimize hot-path crates even in dev builds — bitmap rendering
# and QOI encoding are 10-30x slower without optimizations.
[profile.dev.package.qoi]
opt-level = 3

[profile.dev.package.fontdue]
opt-level = 3

# Note: Can't set opt-level for k2so itself due to linker issues with Tauri.
# The hot-path crates (fontdue, qoi) are optimized which covers most of the cost.
[profile.dev]
opt-level = 1

[profile.release]
strip = true
lto = true
codegen-units = 1
