[package]
name = "k2so-core"
version = "0.35.6"
edition = "2021"
license = "MIT"
description = "K2SO device-local core library: db, llm, terminal, companion, scheduler, agent_hooks, push_adapter. Linked by both src-tauri (Tauri app, thin client) and k2so-daemon (persistent-agent runtime)."

[lib]
path = "src/lib.rs"

[features]
# Enables db::shared()'s automatic in-memory-DB fallback for downstream
# crates' test binaries. Without this, cfg(test) in k2so-core is only
# active when k2so-core's own tests run — src-tauri's test binary would
# panic with "db::init_database must run before db::shared()".
# Enable in src-tauri's [dev-dependencies] entry; NOT a runtime feature.
test-util = []

# Gates the 0.34.0 Session Stream + Awareness Bus primitives (session/,
# awareness/, term/). Flag off = modules don't compile in; zero impact
# on the alacritty-backed terminal path. See the PRD at
# .k2so/prds/session-stream-and-awareness-bus.md for the phased rollout.
session_stream = []

[dependencies]
# Shared primitive deps.
parking_lot = "0.12"

# DB layer (migrations live in crates/k2so-core/drizzle_sql/, loaded via
# include_str!). Bundled SQLite so every platform ships the same version.
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization: used across db, push, eventually companion and scheduler.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML parser for the nested `launch:` block in agent.md frontmatter
# (see agents::launch_profile, phase 3.2 G3). The existing
# parse_frontmatter helper stays for flat key:value callers; the
# launch-profile loader uses serde_yaml for full nested support.
serde_yaml = "0.9"

# Time handling in the activity feed + heartbeat audit rows.
chrono = { version = "0.4", features = ["serde"] }

# UUIDs for agent sessions, heartbeat fires, etc. `serde` enables
# Serialize/Deserialize impls used by session::SessionId (0.34.0).
uuid = { version = "1", features = ["v4", "serde"] }

# Home-directory lookup for ~/.k2so/k2so.db.
dirs = "5"

# libgit2 bindings — worktree creation + branch management + diff/merge.
# `vendored-openssl` matches the flag src-tauri had been using so the
# build doesn't start linking against system libssl. Used by the
# delegate path + the UI review queue.
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Move-to-trash semantics used when removing worktrees — users can
# recover a reject-then-reject-again worktree from the Finder trash.
trash = "5"

# Local LLM inference (llama.cpp bindings with Metal acceleration).
llama-cpp-2 = { version = "0.1", features = ["metal", "sampler"] }

# Blocking HTTP client for llm::download (reqwest with rustls — same
# stack src-tauri uses).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Parallel work-stealing directory walker respecting .gitignore /
# .k2soignore — llm::file_index::search_walk uses it for fuzzy file find.
ignore = "0.4"

# Character-encoding detection for llm::file_index when files are mixed
# UTF-8 / UTF-16 / Latin-1.
encoding_rs = "0.8"

# Terminal backend — VT-compliant parser + PTY management + reflow.
alacritty_terminal = "0.26.0-rc1"
portable-pty = "0.8"

# ANSI tokenizer used by the `session_stream`-gated line-mux producer
# (`term::line_mux`) and the dual-emit PTY reader (`terminal::session_stream_pty`,
# Phase 2). Pinned to "0.15" to match alacritty_terminal's transitive pin
# — single `vte` entry in Cargo.lock. `ansi` feature unlocks
# `vte::ansi::Processor` + `vte::ansi::Handler`, which alacritty's
# `Term` implements so we can drive the grid ourselves from a custom
# reader thread without going through alacritty's private
# `EventLoop::spawn()`.
vte = { version = "0.15", features = ["std", "ansi"] }

# Glyph rendering (bitmap renderer path) + QOI image encoding for mobile
# companion snapshots.
fontdue = "0.9"
qoi = "0.4"

# Low-level primitives used by the alacritty PTY event loop.
libc = "0.2"
polling = "3"
rustix = { version = "1", features = ["termios", "process"] }
mio = { version = "1", features = ["os-poll", "os-ext"] }
signal-hook = "0.3"
signal-hook-mio = { version = "0.2", features = ["support-v1_0"] }

# Companion WS + auth + HTTP proxy — pulled over from src-tauri along
# with crates/k2so-core/src/companion/. argon2 + subtle cover the
# companion password hash + constant-time equality.
argon2 = "0.5"
base64 = "0.22"
subtle = "2.6"
tungstenite = "0.24"

# Companion tunnel (ngrok) + its supporting async stack. Moved over
# from src-tauri along with the orchestrator.
ngrok = "0.18"
tokio = { version = "1", features = ["full"] }
url = "2"
