[package]
name = "k2so-daemon"
version = "0.33.0-dev"
edition = "2021"
license = "MIT"
description = "K2SO persistent-agents daemon: launchd-managed device-local process that runs the scheduler, companion tunnel, and agent orchestration so agents keep working while the Tauri app is quit and the laptop lid is closed."

[[bin]]
name = "k2so-daemon"
path = "src/main.rs"

[dependencies]
k2so-core = { path = "../k2so-core" }

# Cryptographic randomness for the per-boot hook auth token.
getrandom = "0.2"

# Home-directory lookup for ~/.k2so/{daemon.port,daemon.token,daemon.log}.
dirs = "5"

# Async runtime. The daemon is async-first by convention — scheduler ticks,
# companion WS, the HTTP server, and the future daemon->Tauri WS event
# channel all live on the same multi-thread runtime.
tokio = { version = "1", features = ["full"] }
