[package]
name = "k2so-daemon"
version = "0.35.6"
edition = "2021"
license = "MIT"
description = "K2SO persistent-agents daemon: launchd-managed device-local process that runs the scheduler, companion tunnel, and agent orchestration so agents keep working while the Tauri app is quit and the laptop lid is closed."

[[bin]]
name = "k2so-daemon"
path = "src/main.rs"

# Thin library surface so integration tests (crates/k2so-daemon/tests/*)
# can reach modules like `sessions_ws` directly. The daemon has always
# been a binary — this lib entry just re-exports the internal modules
# for the test binaries. Production artifacts unchanged.
[lib]
name = "k2so_daemon"
path = "src/lib.rs"

[dependencies]
# 0.34.0 Session Stream (Phase 2): enables the k2so-core types +
# line-mux + registry that the daemon's /cli/sessions/subscribe
# endpoint fans out. Feature is additive — k2so-core's alacritty
# backend is unchanged when it's on.
k2so-core = { path = "../k2so-core", features = ["session_stream"] }

# Cryptographic randomness for the per-boot hook auth token.
getrandom = "0.2"

# Home-directory lookup for ~/.k2so/{daemon.port,daemon.token,daemon.log}.
dirs = "5"

# Async runtime. The daemon is async-first by convention — scheduler ticks,
# companion WS, the HTTP server, and the daemon->Tauri WS event channel all
# live on the same multi-thread runtime.
tokio = { version = "1", features = ["full"] }

# Async WS server for the daemon->Tauri event channel (GET /events). The
# existing tungstenite 0.24 dep in the workspace is the sync flavor used
# by companion::websocket; tokio-tungstenite tracks the same protocol
# version so frames interop if we ever bridge the two.
tokio-tungstenite = "0.23"

# JSON serialization for HookEvent frames going over /events.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# chrono — agent-reply event payload needs an RFC-3339 timestamp.
chrono = { version = "0.4", features = ["serde"] }

# rusqlite — the per-project heartbeat-schedule route in cli.rs pokes
# the `projects` table directly (it's the only daemon code that touches
# a column k2so-core doesn't already wrap). Bundled feature matches
# what k2so-core uses so rusqlite resolves to a single crate version.
rusqlite = { version = "0.31", features = ["bundled"] }

# Futures helpers (Stream trait / StreamExt / SinkExt) needed by
# tokio-tungstenite's async message loop.
futures-util = "0.3"

[dev-dependencies]
# Enable k2so-core's `test-util` feature for integration tests that
# need the in-memory DB helper (`db::init_for_tests`). Production
# binaries don't link this path — only `cargo test` does.
k2so-core = { path = "../k2so-core", features = ["session_stream", "test-util"] }
